# AVPlayer

./: CMakeLists.txt  main.cpp
Decoder/: MediaDecoder.cpp  MediaDecoder.h  MediaFormat_Desc.h  MediaManager.h  MediaParser.cpp  MediaParser.h
Decoder/Render/: SDLRender.cpp  SDLRender.h
MessageQueue/: DataBufferQueue.cpp  DataBufferQueue.h
Utility/: AVTimer.cpp  AVTimer.h
